--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -3,215 +3,235 @@
 
 <div id="header" class="row">
 
-  <div class="col-md-4 col-xs-4">
-    <div class="row"  id="header_buttons">
-      <div class="button_anchors float-left">
-        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-          <!--  ///// ///// ///// ///// /////  AUTHORISED  ///// ///// ///// ///// ///// --> 
-          {% if is_granted("ROLE_ADMIN") %}
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header hidden-lg hidden-md hidden-sm navbar-inverse">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="white icon-bar"></span>
+        <span class="white icon-bar"></span>
+        <span class="white icon-bar"></span>
+      </button>
+      
+      <a href="{{ path('lbf_main_homepage') }}#mainSection" class="no_style_a navbar-brand">
+        <img src="{{ asset('img/system/logo/final_site.png') }}" alt="Logo" class="logo_header_sm_img"/>
+      </a>
+    </div>
+
+
+
+
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    
+    <div class="nav navbar-nav col-lg-4 col-md-4 col-sm-4 hidden-xs">
+      <div class="row"  id="header_buttons">
+        <div class="button_anchors float-left">
+          {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+            <!--  ///// ///// ///// ///// /////  AUTHORISED  ///// ///// ///// ///// ///// --> 
+            {% if is_granted("ROLE_ADMIN") %}
+              <div id="login_name_status">
+                <a href="{{ path('lbf_admin_homepage') }}" class="no_style_a">
+                  <button id="button_login_a" class="btn btn-log">
+                    ADMIN
+                  </button>
+                </a>
+              </div>
+            {% else %}
+              <a href="{{ path('lbf_user_homepage') }}" class="no_style_a user_access_button">
+                <div class="inline_div">
+                  {% if app.user.alt|length > 0  and app.user.url|length > 0 %}
+                    <div class="user_img_header" style="width: 100%; background-image: url('{{ asset( app.user.webPath) }}'); background-size: cover; background-position: 50%;">
+                      <!-- onClick="showPhoto('{{ app.user.id }}')" -->
+                      <script type="text/javascript">
+                        var cw = $('.user_img_header').width();
+                        $('.user_img_header').css({'height':cw+'px'});
+                      </script>
+                    </div>
+                  {% else %}
+                    <img src="{{ asset('img/system/defaults/default_profile.png') }}" alt="Default" class="user_img_header"/>
+                      <script type="text/javascript">
+                        var cw = $('.user_img_header').width();
+                        $('.user_img_header').css({'height':cw+'px'});
+                      </script>
+                  {% endif %}
+                </div>
+                <div class="inline_div user_info_header">
+                  {% if app.user.firstName|length > 0 %}
+                    {{ app.user.firstName }}
+                  {% else %}
+                    {{ app.user.username }}
+                  {% endif %}
+                </div>
+              </a>
+            {% endif %}
+          {% else %}
             <div id="login_name_status">
-              <a href="{{ path('lbf_admin_homepage') }}" class="no_style_a">
-                <button id="button_login_a" class="btn btn-log">
-                  ADMIN
+              <a href="{{ path('fos_user_security_login') }}" class="no_style_a">
+                <button id="button_login_a" class="btn btn-log
+                {% if (route == 'fos_user_security_login')
+                    or (route == 'fos_user_resetting_reset')
+                    or (route == 'fos_user_resetting_request')
+                    or (route == 'fos_user_change_password')
+                    or (route == 'fos_user_registration_register') %}
+                btn-log-active
+                {% endif %}
+                ">
+                  {% if (route == 'fos_user_resetting_reset') %}
+                    {{ 'header.titles.reset' | trans }}
+                  {% elseif (route == 'fos_user_resetting_request') %}
+                    {{ 'header.titles.request' | trans }}
+                  {% elseif (route == 'fos_user_change_password') %}
+                    {{ 'header.titles.changePassword' | trans }}
+                  {% elseif (route == 'fos_user_registration_register') %}
+                    {{ 'header.titles.register' | trans }}
+                  {% else %}
+                    {{ 'header.titles.login' | trans }}
+                  {% endif %}
                 </button>
               </a>
             </div>
-          {% else %}
-            <a href="{{ path('lbf_user_homepage') }}" class="no_style_a user_access_button">
-              <div class="inline_div">
-                {% if app.user.alt|length > 0  and app.user.url|length > 0 %}
-                  <div class="user_img_header" style="width: 100%; background-image: url('{{ asset( app.user.webPath) }}'); background-size: cover; background-position: 50%;">
-                    <!-- onClick="showPhoto('{{ app.user.id }}')" -->
-                    <script type="text/javascript">
-                      var cw = $('.user_img_header').width();
-                      $('.user_img_header').css({'height':cw+'px'});
-                    </script>
-                  </div>
-                {% else %}
-                  <img src="{{ asset('img/system/defaults/default_profile.png') }}" alt="Default" class="user_img_header"/>
-                    <script type="text/javascript">
-                      var cw = $('.user_img_header').width();
-                      $('.user_img_header').css({'height':cw+'px'});
-                    </script>
-                {% endif %}
-              </div>
-              <div class="inline_div user_info_header">
-                {% if app.user.firstName|length > 0 %}
-                  {{ app.user.firstName }}
-                {% else %}
-                  {{ app.user.username }}
-                {% endif %}
-              </div>
-            </a>
           {% endif %}
-        {% else %}
-          <div id="login_name_status">
-            <a href="{{ path('fos_user_security_login') }}" class="no_style_a">
-              <button id="button_login_a" class="btn btn-log
-              {% if (route == 'fos_user_security_login')
-                  or (route == 'fos_user_resetting_reset')
-                  or (route == 'fos_user_resetting_request')
-                  or (route == 'fos_user_change_password')
-                  or (route == 'fos_user_registration_register') %}
+        </div>
+        
+        <div class="button_anchors float-right" data-menuanchor="aboutUs">
+          <a href="{{ path('lbf_main_homepage') }}#aboutUs" class="no_style_a">
+            <button class="btn btn-log" id="btn_section1">
+              {{ 'header.titles.aboutUs' | trans }}
+            </button>
+          </a>
+        </div>
+
+        <div class="button_anchors float-right" data-menuanchor="ourProducts">
+          <a href="{{ path('lbf_main_homepage') }}#ourProducts" class="no_style_a">
+            <button class="btn btn-log"  id="btn_section2">
+              {{ 'header.titles.ourProducts' | trans }}
+            </button>
+          </a>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="nav navbar-nav col-lg-4 col-md-4 col-sm-4 hidden-xs">
+      <!-- Main title -->
+      <a href="{{ path('lbf_main_homepage') }}#mainSection" class="no_style_a">
+        <h1>
+          Le Buffet Francés
+        </h1>
+      </a>
+    </div>
+
+    <div class="nav navbar-nav col-lg-4 col-md-4 col-sm-4 hidden-xs" id="language_selection">
+
+      <!-- BEGIN LANGUAGE SELECTION DROPDOWN -->
+      <div class="language_box float-left">
+        {% set current_language = '' %}
+        {% if (app.request.get('_route_params')) != null %}
+          {% if (app.request.get('_route_params')._locale == 'fr') %}
+            {% set current_language = 'fr' %}
+          {% elseif (app.request.get('_route_params')._locale == 'en') %}
+            {% set current_language = 'en' %}
+          {% else %}
+            {% set current_language = 'es' %}
+          {% endif %}
+        {% endif %}
+        <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'es'})) }}" title="ES" alt="ES" class="language_selection no_style_a
+        {% if current_language == 'es' %}
+          language_active
+        {% endif %}
+        ">
+          <img src="{{ asset('img/system/language_flags/es.png') }}" alt="ES" class="language_flag"/>
+        </a>
+        <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'fr'})) }}" title="FR" alt="FR" class="language_selection no_style_a
+        {% if current_language == 'fr' %}
+          language_active
+        {% endif %}
+        ">
+          <img src="{{ asset('img/system/language_flags/fr.png') }}" alt="FR" class="language_flag"/>
+        </a>
+        <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'en'})) }}" title="EN" alt="EN" class="language_selection no_style_a
+        {% if current_language == 'en' %}
+          language_active
+        {% endif %}
+        ">
+          <img src="{{ asset('img/system/language_flags/en.png') }}" alt="EN" class="language_flag"/>
+        </a>
+      </div>
+      <!-- END LANGUAGE SELECTION DROPDOWN -->
+
+
+      <!-- BEGIN CART -->
+      <div class="cart_button" id="button_cart_div">
+        <button id="button_cart_a"  class="btn btn-log float-right 
+            {% if route == 'lbf_main_cart'
+                or route == 'lbf_main_order'
+                or route == 'lbf_main_confirm' %}
               btn-log-active
-              {% endif %}
-              ">
-                {% if (route == 'fos_user_resetting_reset') %}
-                  {{ 'header.titles.reset' | trans }}
-                {% elseif (route == 'fos_user_resetting_request') %}
-                  {{ 'header.titles.request' | trans }}
-                {% elseif (route == 'fos_user_change_password') %}
-                  {{ 'header.titles.changePassword' | trans }}
-                {% elseif (route == 'fos_user_registration_register') %}
-                  {{ 'header.titles.register' | trans }}
-                {% else %}
-                  {{ 'header.titles.login' | trans }}
-                {% endif %}
-              </button>
-            </a>
+            {% endif %}" onClick="addToSessionCart()" disabled>
+          <div class="cart_label">
+            {{ 'header.titles.myCart' | trans }}
           </div>
-        {% endif %}
-      </div>
-      
-      <div class="button_anchors float-right" data-menuanchor="aboutUs">
-        <a href="{{ path('lbf_main_homepage') }}#aboutUs" class="no_style_a">
-          <button class="btn btn-log" id="btn_section1">
-            {{ 'header.titles.aboutUs' | trans }}
-          </button>
-        </a>
-      </div>
-
-      <div class="button_anchors float-right" data-menuanchor="ourProducts">
-        <a href="{{ path('lbf_main_homepage') }}#ourProducts" class="no_style_a">
-          <button class="btn btn-log"  id="btn_section2">
-            {{ 'header.titles.ourProducts' | trans }}
-          </button>
-        </a>
-      </div>
-
-    </div>
-
-  </div>
-
-  <div class="col-md-4 col-xs-4">
-    <!-- Main title -->
-    <a href="{{ path('lbf_main_homepage') }}#mainSection" class="no_style_a">
-      <h1 id="main_title" class="opacity1">
-        Le Buffet Francés
-      </h1>
-    </a>
-  </div>
-
-  <div class="col-md-4 col-xs-4" id="language_selection">
-
-    <!-- BEGIN LANGUAGE SELECTION DROPDOWN -->
-    <div class="language_box">
-      {% set current_language = '' %}
-      {% if (app.request.get('_route_params')) != null %}
-        {% if (app.request.get('_route_params')._locale == 'fr') %}
-          {% set current_language = 'fr' %}
-        {% elseif (app.request.get('_route_params')._locale == 'en') %}
-          {% set current_language = 'en' %}
-        {% else %}
-          {% set current_language = 'es' %}
-        {% endif %}
-      {% endif %}
-      <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'es'})) }}" title="ES" alt="ES" class="language_selection no_style_a
-      {% if current_language == 'es' %}
-        language_active
-      {% endif %}
-      ">
-        <img src="{{ asset('img/system/language_flags/es.png') }}" alt="ES" class="language_flag"/>
-      </a>
-      <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'fr'})) }}" title="FR" alt="FR" class="language_selection no_style_a
-      {% if current_language == 'fr' %}
-        language_active
-      {% endif %}
-      ">
-        <img src="{{ asset('img/system/language_flags/fr.png') }}" alt="FR" class="language_flag"/>
-      </a>
-      <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'en'})) }}" title="EN" alt="EN" class="language_selection no_style_a
-      {% if current_language == 'en' %}
-        language_active
-      {% endif %}
-      ">
-        <img src="{{ asset('img/system/language_flags/en.png') }}" alt="EN" class="language_flag"/>
-      </a>
-    </div>
-    <!-- END LANGUAGE SELECTION DROPDOWN -->
-
-
-    <!-- BEGIN CART -->
-    <div class="cart_button" id="button_cart_div">
-      <button id="button_cart_a"  class="btn btn-log float-right 
-          {% if route == 'lbf_main_cart'
-              or route == 'lbf_main_order'
-              or route == 'lbf_main_confirm' %}
-            btn-log-active
-          {% endif %}" onClick="addToSessionCart()" disabled>
-        <div class="cart_label">
-          {{ 'header.titles.myCart' | trans }}
-        </div>
-        <div id="number_notif">
-          <div  class="number_notif" id="number_in_number_notif" style="display:none;">
-          </div>
-          <script type="text/javascript">
-            function updateNotifNumber() {
-              // To empty cart manually
-              // $.cookie("sessionCart", null);
-
-              var sessionCart = $.cookie("sessionCart");
-              if (sessionCart) {
-                var cart_length = sessionCart.length;
-                if (cart_length > 0) {
-                  document.getElementById("number_in_number_notif").style.display = "block";
-                  document.getElementById("number_in_number_notif").innerHTML = cart_length;
-
-                  document.getElementById("button_cart_a").disabled = false;
-                }
-              }
-
-              return false;
-            }
-
-            function addToSessionCart() {
-              var sessionCart = $.cookie("sessionCart"); 
-              // var sessionCart = JSON.parse($.cookie("sessionCart"));
-              if (sessionCart.length > 0) {
-                window.location = '{{ path('lbf_main_add_to_cart') }}';
-              }
-              else {
-                // Flash message
-                document.getElementById("sessionFlash").style.display = "block";
-                document.getElementById("sessionFlash").innerHTML = '\
-                <div class="alert alert-warning alert-dismissible fade in" role="alert">\
-                  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>\
-                  <strong>Careful!</strong> Your cart is curently empty.\
-                </div>';
-                setTimeout(function() {
-                  $('.alert').fadeOut('fast');
-                  document.getElementById("sessionFlash").style.display = "none";
-                },4000);
-              }
-              return false;
-            }
-          </script>
-
-
-          <!-- Old version -->
-          {# set cart = app.session.get('cart') %}
-          {% if cart|length > 0 %}
-            <div class="number_notif">
-              {{ cart|length }}
+          <div id="number_notif">
+            <div  class="number_notif" id="number_in_number_notif" style="display:none;">
             </div>
-          {% endif #}
-        </div>
-      </button>
+            <script type="text/javascript">
+              function updateNotifNumber() {
+                // To empty cart manually
+                // $.cookie("sessionCart", null);
+
+                var sessionCart = $.cookie("sessionCart");
+                if (sessionCart) {
+                  var cart_length = sessionCart.length;
+                  if (cart_length > 0) {
+                    document.getElementById("number_in_number_notif").style.display = "block";
+                    document.getElementById("number_in_number_notif").innerHTML = cart_length;
+
+                    document.getElementById("button_cart_a").disabled = false;
+                  }
+                }
+
+                return false;
+              }
+
+              function addToSessionCart() {
+                var sessionCart = $.cookie("sessionCart"); 
+                // var sessionCart = JSON.parse($.cookie("sessionCart"));
+                if (sessionCart.length > 0) {
+                  window.location = '{{ path('lbf_main_add_to_cart') }}';
+                }
+                else {
+                  // Flash message
+                  document.getElementById("sessionFlash").style.display = "block";
+                  document.getElementById("sessionFlash").innerHTML = '\
+                  <div class="alert alert-warning alert-dismissible fade in" role="alert">\
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>\
+                    <strong>Careful!</strong> Your cart is curently empty.\
+                  </div>';
+                  setTimeout(function() {
+                    $('.alert').fadeOut('fast');
+                    document.getElementById("sessionFlash").style.display = "none";
+                  },4000);
+                }
+                return false;
+              }
+            </script>
+
+
+            <!-- Old version -->
+            {# set cart = app.session.get('cart') %}
+            {% if cart|length > 0 %}
+              <div class="number_notif">
+                {{ cart|length }}
+              </div>
+            {% endif #}
+          </div>
+        </button>
+      </div>
+      <!-- END CART -->
+
+      
     </div>
-    <!-- END CART -->
 
-    
   </div>
-
 
 </div>
