--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -6,18 +6,17 @@ html {
 	/*min-width: 1000px;
 	min-height: 700px;*/
 	width: 100%;
-	/*background-color: rgba(0,0,0,0.9); */
+	background-color: white; 
 	background-image: url('../img/system/defaults/background_default_medium.jpg');
-	/*background-image: url('../img/system/defaults/background_default_dark.png');*/
 }
 
 body
 {	
 	width: 100%;
 	background-color: transparent;
-	font-family: 'sakkal_majallaregular';  /* existencelight */
-	font-weight: 100 !important;
-	line-height: 120%;
+	font-family: 'Helvetica Neue';  /* existencelight */
+	font-weight: 200;
+	
 	color: rgba(41,41,41,0.95) !important;
 }
 
@@ -55,45 +54,42 @@ h1
 	margin-bottom: 0 !important;
 	margin-top: 0 !important;
 	text-align: center;
-	font-family: 'espacio';
-	font-weight: 200;
+	font-family: 'Helvetica Neue';
+	font-weight: 100 !important;
 }
 @media (min-width: 1401px) {
 	h1 {
-		font-size: 3em;
+		font-size: 2.4em;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	h1 {
-		font-size: 2em;
+		font-size: 1.9em;
 	}
 }
 @media (max-width: 992px) {
 	h1 {
-		font-size: 1.5em;
+		font-size: 1.4em !important;
 	}
 }
 
 h2
 {	
 	margin: 0;
-	padding-left: 10px;
-	padding-right: 10px;
-	font-weight: 300 !important;
+	padding: 0;
+	font-weight: 400 !important;
 	color: inherit;
 }
 h2 span {
 	margin: 0 !important;
 	padding: 0 !important;
-	font-weight: 100 !important;
-	position: relative;
-	top: -10px;
+	font-weight: 120 !important;
 }
 @media (min-width: 1401px) {
 	h2 {
 		padding-top: 8px !important;
-		padding-bottom: 20px;
-		font-size: 2.7em;
+		margin-bottom: 8px !important;
+		font-size: 2.1em;
 	}
 	h2 span {
 		font-size: 0.8em;
@@ -102,8 +98,8 @@ h2 span {
 @media (min-width: 993px) and (max-width: 1400px){
 	h2 {
 		padding-top: 3px !important;
-		padding-bottom: 5px;
-		font-size: 2.2em;
+		margin-bottom: 3px !important;
+		font-size: 1.6em;
 	}
 	h2 span {
 		font-size: 0.7em;
@@ -112,8 +108,8 @@ h2 span {
 @media (max-width: 992px) {
 	h2 {
 		padding-top: 0px !important;
-		padding-bottom: 0px !important;
-		font-size: 1.4em;
+		margin-bottom: 0px !important;
+		font-size: 1.3em;
 	}
 	h2 span {
 		font-size: 0.6em;
@@ -122,18 +118,19 @@ h2 span {
 
 h3
 {	
+	font-weight: 300 !important;
 	padding: 0 !important;
 	margin: 0 !important;
 	color: inherit;
 }
 @media (min-width: 1401px) {
 	h3 {
-		font-size: 2.1em;
+		font-size: 1.7em;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	h3 {
-		font-size: 1.6em;
+		font-size: 1.4em;
 	}
 }
 @media (max-width: 992px) {
@@ -151,17 +148,17 @@ h4
 }
 @media (min-width: 1401px) {
 	h4 {
-		font-size: 1.5em;
+		/*font-size: 1.5em;*/
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	h4 {
-		font-size: 1.1em;
+		/*font-size: 1.1em;*/
 	}
 }
 @media (max-width: 992px) {
 	h4 {
-		font-size: 0.9em;
+		/*font-size: 0.9em;*/
 	}
 }
 
@@ -173,12 +170,12 @@ h5 {
 }
 @media (min-width: 901px) {
 	h5 {
-		font-size: 1.4em;
+		/*font-size: 1.4em;*/
 	}
 }
 @media (max-width: 992px) {
 	h5 {
-		font-size: 1em;
+		/*font-size: 1em;*/
 	}
 }
 
@@ -212,25 +209,25 @@ hr {
 	font-weight: 800;
 }
 .font1em {
-	font-size: 1em;
+	/*font-size: 1em;*/
 }
 .font10 {
-	font-size: 10px;
+	/*font-size: 10px;*/
 }
 .font12 {
-	font-size: 12px;
+	/*font-size: 12px;*/
 }
 .font14 {
-	font-size: 14px;
+	/*font-size: 14px;*/
 }
 .font16 {
-	font-size: 16px;
+	/*font-size: 16px;*/
 }
 .font18 {
-	font-size: 18px;
+	/*font-size: 18px;*/
 }
 .font20 {
-	font-size: 20px;
+	/*font-size: 20px;*/
 }
 .paragraph {
 	margin-left: 5%;
@@ -255,10 +252,12 @@ ul ul {
 	list-style-type: none;
 }
 a, a:focus {
+	outline:none;
 	color: inherit;
 	text-decoration: none;
 }
 button, button:focus {
+	outline:none;
 	color: inherit;
 	text-decoration: none;	
 }
@@ -267,6 +266,7 @@ a:hover {
 	text-decoration: underline;
 }
 .no_style_a, .no_style_a:focus {
+	outline:none;
 	text-decoration: none;
 	font-style: normal;
 }
@@ -276,33 +276,30 @@ a:hover {
 	font-style: normal;
 }
 .no_style_button, .no_style_button:focus {
+	outline:none;
 	border: none;
 	background-color: transparent;
 	box-shadow: none;
 }
 .btn:focus {
+	outline:none;
 	color: inherit;
 	text-decoration: none;
 	box-shadow: none;
 }
 p {	
 	margin: 5px 10px 5px 10px;
-	text-align: left;
+	text-align: center;
 	color: inherit;
 }
-@media (min-width: 1401px) {
+@media (min-width: 993px) {
 	p {
-		font-size: 1.4em;
-	}
-}
-@media (min-width: 993px) and (max-width: 1400px){
-	p {
-		font-size: 1.1em;
+		font-size: 1em;
 	}
 }
 @media (max-width: 992px) {
 	p {
-		font-size: 0.7em;
+		font-size: 0.8em;
 	}
 }
 
@@ -368,36 +365,48 @@ strong {
 	box-shadow: 0px 1px 3px 2px rgba(41,41,41,0.4);
 
 	text-transform : uppercase;
+	min-height: 36px;
 	max-height: 50px;
 
 	padding-top: 5px;
-	padding-bottom: 3px !important;
+	padding-bottom: 1px !important;
 
 	color: white !important;
 }
 
-#menu li {
-	display: inline-block;
-	list-style-type: none;
+.navbar-brand {
+	font-weight: 500 !important;
+	font-size: 1em !important;
 }
 
 .user_img_header {
 	border: 1px solid white;
 	margin: 0;
+	position: relative;
 }
 .user_info_header {
 	overflow: hidden;
 	border-bottom: 1px solid transparent;
 	position: relative;
 }
-@media (min-width: 901px) {
+@media (min-width: 1401px) {
 	.user_img_header {
 		border-radius: 20px;
 		width: 40px !important;
 	}
 	.user_info_header {
 		font-size: 0.8em;
-		top: -14px;
+		top: -15px;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.user_img_header {
+		border-radius: 14px;
+		width: 28px !important;
+	}
+	.user_info_header {
+		font-size: 0.8em;
+		top: -8px;
 	}
 }
 @media (max-width: 992px) {
@@ -406,8 +415,8 @@ strong {
 		width: 20px !important;
 	}
 	.user_info_header {
-		font-size: 0.6em;
-		top: -10px;
+		font-size: 0.58em;
+		top: -5px;
 	}
 }
 .user_access_button:hover .user_info_header {
@@ -415,12 +424,12 @@ strong {
 }
 
 .button_anchors {
-	display: inline-block;
+	display: inline-block !important;
 }
 
 .btn-log, .btn-log:focus {
-	margin: 0 5px;
-	padding: 5px 9px 1px 9px; 
+	outline:none;
+	margin: 1px !important;
 
 	background-color: transparent;
 	/*border: 1px solid white;*/
@@ -432,24 +441,27 @@ strong {
 }
 @media (min-width: 1401px) {
 	.btn-log {
-		font-size: 1.3em;
+		padding: 5px 9px; 
+		font-size: 1em;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	.btn-log {
-		font-size: 1.1em;
+		padding: 4px 7px; 
+		font-size: 0.8em;
 	}
 }
 @media (max-width: 992px) {
 	.btn-log {
-		font-size: 0.9em;
+		padding: 3px 5px; 
+		font-size: 0.58em;
 	}
 }
 .btn-log:hover, .btn-log-active {
-	/*background-color: rgba(0,0,0,0.5);*/
+	background-color: transparent;
 	color: inherit;
-	border-bottom: 1.5px solid white;
-	border-top: 1.5px solid white;
+	border-bottom: 1.5px solid white !important;
+	border-top: 1.5px solid white !important;
 }
 .top_button {
 	margin-bottom: 6px;
@@ -457,21 +469,31 @@ strong {
 
 .language_box {
 	float: left;
-	margin-top: 4px;
 }
-@media (min-width: 901px) {
+@media (min-width: 1401px) {
 	.language_flag {
-	  width: 22px;
+	  width: 25px;
 	}
 	.language_box {
+		margin-top: 4px;
 		margin-right: 5px;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.language_flag {
+	  width: 19px;
+	}
+	.language_box {
+		margin-top: 2px;
+		margin-right: 2px;
 	}
 }
 @media (max-width: 992px) {
 	.language_flag {
-	  width: 12px;
+	  width: 16px;
 	}
 	.language_box {
+		margin-top: 1px;
 		margin-right: 1px;
 	}
 }
@@ -504,14 +526,32 @@ strong {
 .number_notif {
 	background-color: white;
 	color: rgba(41,41,41,0.95);
-	width: 20px;
-	height: 20px;
-	border-radius: 10px;
-	font-size: 1em;
+	/*font-size: 1em;*/
 	text-align: center;
 	margin-left: 5px;
 	position: relative;
 	top: -1px;
+}
+@media (min-width: 1401px) {
+	.number_notif {
+		width: 20px;
+		height: 20px;
+		border-radius: 10px;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.number_notif {
+		width: 16px;
+		height: 16px;
+		border-radius: 8px;
+	}
+}
+@media (max-width: 992px) {
+	.number_notif {
+		width: 12px;
+		height: 12px;
+		border-radius: 6px;
+	}
 }
 
 #social_media {	
@@ -555,7 +595,7 @@ strong {
 @media (min-width: 993px) and (max-width: 1400px){
 	#social_media {
 		left: -80.5px;
-		font-size: 1.1em;
+		font-size: 1em;
 	}
 	.social_label {
 		width: 80px;
@@ -575,7 +615,7 @@ strong {
 @media (max-width: 992px) {
 	#social_media {
 		left: -60.5px;
-		font-size: 1em;
+		font-size: 0.8em;
 	}
 	.social_label {
 		width: 60px;
@@ -613,7 +653,7 @@ strong {
 	background: rgba(250,250,250,0.7); /*rgba(40,40,40,0.95);*/
 }
 .social_item:hover {
-	background: rgba(250,250,250,1); /*rgba(40,40,40,0.95);*/
+	background: rgba(215,215,215,1); /*rgba(40,40,40,0.95);*/
 }
 .social_item_spe {
 	color: white !important;
@@ -632,7 +672,6 @@ strong {
 }
 .social_label, .social_icon {	
 	margin: 0 !important;
-	border: 0.5px solid rgba(20,20,20,0.8);
 	background-color: transparent;
 	display: inline-block;
 }
@@ -650,7 +689,7 @@ strong {
 }
 
 #button_to_top {
-	font-size: 1em;
+	/*font-size: 1em;*/
 	position: fixed;
 	bottom: 50px;
 	right: 50px;
@@ -663,19 +702,18 @@ strong {
 	height: 50px;
 	border-radius: 25px;
 	text-align: center !important;
-	background-color: rgba(250,250,250,0.85);
+	background-color: rgba(255,185,185,0.8); /*rgba(250,250,250,0.85);*/
 }
 
 .btn-to-top {
 	color: rgba(41,41,41,0.95);
 	margin-left: 10px;
 	margin-right: 10px;
-	font-size : 1.2em;
+	/*font-size : 1.2em;*/
 	background-color: transparent;
 	/*border: 1px solid white;*/
 	border-radius: 0;
-	border-bottom: 1.5px solid transparent;
-	border-top: 1.5px solid transparent;
+	border: 1.5px solid rgba(228,43, 54, 0.8);
 }
 .btn-to-top:hover {
 	/*background-color: rgba(0,0,0,0.5);*/
@@ -687,10 +725,10 @@ strong {
 /* -----------------------------------------------    Content   -------------------------------------------------- */
 
 .page-container {
-	background-color: rgba(260,255,255,0.97); /*#541009 ;*/
-	margin-top: 50px;
+	background-color: rgba(260,255,255,0.96); /*#541009 ;*/
+	margin: auto !important;
+	width: 100% !important;
 	max-width: 1200px;
-	margin: auto;
 	border-left: 1px solid rgba(41,41,41,0.95);
 	border-right: 1px solid rgba(41,41,41,0.95);
 	box-shadow: 0px 4px 8px 4px rgba(41,41,41,0.3);
@@ -705,7 +743,7 @@ strong {
 	margin: auto;
 	display: none;
 	z-index: 99999;
-	font-size: 1.3em;
+	/*font-size: 1.3em;*/
 	width: 100% !important;
 }
 .alert {
@@ -743,24 +781,30 @@ strong {
 }
 @media (min-width: 1401px) {
 	.logo_welcome {
-		top : 68px !important;
+		top : 65px !important;
 		margin-left: 39%;
 		width: 22%;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	.logo_welcome {
-		top : 48px !important;
+		top : 55px !important;
 		margin-left: 41%;
 		width: 18%;
 	}
 }
 @media (max-width: 992px) {
 	.logo_welcome {
-		top : 38px !important;
+		top : 45px !important;
 		margin-left: 42%;
 		width: 16%;
 	}
+}
+.logo_header_sm_img {
+	width: 24%;
+	position: absolute;
+	top: 6px;
+	left: 6px;
 }
 
 .presentation_photos {
@@ -780,7 +824,7 @@ strong {
 .captionOrange, .captionrgba(41,41,41,0.95)
 {
     color: #fff;
-    font-size: 20px;
+    /*font-size: 20px;*/
     line-height: 30px;
     text-align: center;
     border-radius: 4px;
@@ -792,7 +836,7 @@ strong {
 }
 .captionrgba(41,41,41,0.95)
 {
-	font-size:16px;
+	/*font-size:16px;*/
     background: #000;
     background-color: rgba(0, 0, 0, 0.8);
 }
@@ -868,7 +912,12 @@ a.captionOrange:hover
 	color: inherit;
 }
 .icon_presentation {
-	width: 50%;
+	width: 40%;
+}
+.sep_presentation {
+	padding: 0 !important;
+	margin: 5px 0 5px 0 !important;
+	border-bottom: 1px dotted rgba(41,41,41,0.5);
 }
 
 .title_div {
@@ -924,7 +973,7 @@ a.captionOrange:hover
 	margin-top: 10px;
 	margin-left: 10px;
 	margin-right: 10px;
-	font-size : 1.1em;
+	/*font-size : 1.1em;*/
 	background-color: transparent;
 	/*border: 1px solid white;*/
 	border-radius: 0;
@@ -938,7 +987,7 @@ a.captionOrange:hover
 
 .nav-tabs {
 	margin-top: 0 !important;
-	font-size: 1.5em;
+	/*font-size: 1.5em;*/
 }
 .nav-tabs li {
 	width: 23%;
@@ -961,7 +1010,7 @@ a.captionOrange:hover
 	color: rgba(41,41,41,0.95);
 }
 .tab-content {
-	font-size: 1.1em;
+	/*font-size: 1.1em;*/
 }
 
 .btn_right_arrow {
@@ -980,7 +1029,7 @@ a.captionOrange:hover
 	height: 30px;
 	margin-left: 10%;
 	margin-top: 3px;
-	font-size : 1.1em;
+	/*font-size : 1.1em;*/
 	background-color: transparent;
 	padding: 4px 10px 6px 10px;
 	border-radius: 0px;
@@ -1018,7 +1067,7 @@ a.captionOrange:hover
 	cursor: pointer;
 }*/
 .small_quote {
-	font-size: 0.7em;
+	/*font-size: 0.7em;*/
 	font-style: italic;
 	text-align: center;
 }
@@ -1040,7 +1089,7 @@ a.captionOrange:hover
 	text-align: center;
 	width: 30px;
 	height: 30px;
-	font-size: 1.3em !important;
+	/*font-size: 1.3em !important;*/
 	color: rgba(41,41,41,0.95);
 	background-color: transparent;
 	border : 1px solid rgba(41,41,41,0.95);
@@ -1048,7 +1097,8 @@ a.captionOrange:hover
 	position: relative;
 	top: 5px;
 }
-.add_buttons:hover, .add_buttons:active {
+.add_buttons:hover, .add_buttons:active, .add_buttons:focus {
+	outline: none;
 	color: rgba(41,41,41,0.95);
 	background-color: rgba(100,100,100,0.2);
 }
@@ -1058,7 +1108,7 @@ a.captionOrange:hover
 .counter_info_divs {
 	font-style: italic;
 	font-weight: 900;
-	font-size: 1em;
+	/*font-size: 1em;*/
 	position: relative;
 	top: 10px;
 	/*border-bottom: 1px dotted white;*/
@@ -1066,7 +1116,7 @@ a.captionOrange:hover
 .counter_price_divs {
 	color: white;
 	font-weight: 900;
-	font-size: 1.2em;
+	/*font-size: 1.2em;*/
 	position: relative;
 	top: 5px;
 	background-color: rgba(41,41,41,0.5);
@@ -1091,6 +1141,7 @@ a.captionOrange:hover
 	opacity: 1;
 }
 .btn-add-to-cart, .btn-add-to-cart:focus {
+	outline:none;
 	border: none;
 	background-color: transparent;
 	box-shadow: none;
@@ -1121,17 +1172,17 @@ a.captionOrange:hover
 }
 @media (min-width: 1401px) {
 	.cart_price {
-		font-size: 1.2em;
+		/*font-size: 1.2em;*/
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	.cart_price {
-		font-size: 1.1em;
+		/*font-size: 1.1em;*/
 	}
 }
 @media (max-width: 992px) {
 	.cart_price {
-		font-size: 1em;
+		/*font-size: 1em;*/
 	}
 }
 
@@ -1140,7 +1191,7 @@ a.captionOrange:hover
 }
 
 .bio {
-	font-size: 1.3em !important;
+	/*font-size: 1.3em !important;*/
 	line-height: 130%;
 	text-align: justify;
 }
@@ -1150,7 +1201,7 @@ a.captionOrange:hover
 	background-color: inherit;
 }
 #login_section {
-	font-size: 1em;
+	/*font-size: 1em;*/
 	padding: 30px;
 	border: 1px solid rgba(41,41,41,0.5);
 	overflow: scroll !important;
@@ -1159,10 +1210,10 @@ a.captionOrange:hover
 	min-height: 100px;
 }
 .login_content_font_size {
-	font-size: 1.3em !important;
+	/*font-size: 1.3em !important;*/
 }
 .login_content_font_size label,  .login_content_font_size input {
-	font-size: 0.9em !important;
+	/*font-size: 0.9em !important;*/
 }
 .login_titles {
 	margin: 0;
@@ -1181,7 +1232,8 @@ a.captionOrange:hover
 }
 
 .btn-login, .btn-login:focus {
-	margin: 0 5px;
+	outline:none;
+	margin: 5px;
 	padding: 5px 9px 1px 9px; 
 	background-color: transparent;
 	/*border: 1px solid white;*/
@@ -1193,17 +1245,17 @@ a.captionOrange:hover
 }
 @media (min-width: 1401px) {
 	.btn-login {
-		font-size: 1.3em;
+		/*font-size: 1.3em;*/
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	.btn-login {
-		font-size: 1.1em;
+		/*font-size: 1.1em;*/
 	}
 }
 @media (max-width: 992px) {
 	.btn-login {
-		font-size: 0.9em;
+		/*font-size: 0.9em;*/
 	}
 }
 .btn-login:hover, .btn-login-active {
@@ -1259,17 +1311,17 @@ a.captionOrange:hover
 }
 @media (min-width: 1401px) {
 	.delete_buttons_cart {
-		font-size: 1em !important;
+		/*font-size: 1em !important;*/
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	.delete_buttons_cart {
-		font-size: 0.9em !important;
+		/*font-size: 0.9em !important;*/
 	}
 }
 @media (max-width: 992px) {
 	.delete_buttons_cart {
-		font-size: 0.8em !important;
+		/*font-size: 0.8em !important;*/
 	}
 }
 .delete_buttons_cart:hover, .delete_buttons_cart:active {
@@ -1295,17 +1347,17 @@ a.captionOrange:hover
 }
 @media (min-width: 1401px) {
 	#breadcrumb .inline_div {
-		font-size: 1.4em !important;
+		/*font-size: 1.4em !important;*/
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	#breadcrumb .inline_div {
-		font-size: 1.2em !important;
+		/*font-size: 1.2em !important;*/
 	}
 }
 @media (max-width: 992px) {
 	#breadcrumb .inline_div {
-		font-size: 1em !important;
+		/*font-size: 1em !important;*/
 	}
 }
 
@@ -1330,17 +1382,17 @@ a.captionOrange:hover
 
 @media (min-width: 1401px) {
 	.cart_content {
-		font-size: 1.3em;
+		/*font-size: 1.3em;*/
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	.cart_content {
-		font-size: 1.1em;
+		/*font-size: 1.1em;*/
 	}
 }
 @media (max-width: 992px) {
 	.cart_content {
-		font-size: 0.9em;
+		/*font-size: 0.9em;*/
 	}
 }
 
@@ -1381,6 +1433,7 @@ a.captionOrange:hover
 
 }
 .hover_popup:focus{
+	outline:none;
     background:rgba(250,250,250,0.9);
     box-shadow:0 1px 0 rgba(41,41,41,0.4);
 }
@@ -1399,6 +1452,7 @@ a.captionOrange:hover
     z-index: 10000;
 }
 .hover_popup:hover span, .hover_popup:focus span {
+	outline:none;
     transform:scale(1) rotate(0);
     opacity:1;
 }
@@ -1409,7 +1463,7 @@ a.captionOrange:hover
 }
 
 #user_panel_parent {
-	font-size: 1.2em !important;
+	/*font-size: 1.2em !important;*/
 	padding-right: 10px;
 }
 
@@ -1428,29 +1482,30 @@ a.captionOrange:hover
 }
 .page-container-admin {
 	background-color: rgba(250,250,250,0.98);
+	margin: auto;
 	margin-top: 50px;
 	width: 100%;
-	margin: auto;
 }
 
 #admin_content {
-	font-size: 1.2em !important;
+	/*font-size: 1.2em !important;*/
 }
 #admin_content input {
-	font-size: 0.9em !important;	
+	/*font-size: 0.9em !important;	*/
 }
 #admin_content select, #admin_content textarea {
-	font-size: 1.1em !important;	
+	/*font-size: 1.1em !important;	*/
 }
 
 .btn-admin, .btn-admin:focus {
+	outline:none;
 	margin:0;
 	color: rgba(41,41,41,0.95);
 	background-color: transparent;
 	/*border: 1px solid white;*/
 	border-radius: 0;
 	border-bottom: 1.5px solid transparent;
-	font-size: 1.1em;
+	/*font-size: 1.1em;*/
 	padding: 2px;
 }
 .btn-admin:hover {
@@ -1478,11 +1533,11 @@ a.captionOrange:hover
 	min-height: 84px;
 	margin: 0;
 	padding: 4px;
-	font-size: 1.2em;
+	font-size: 1em;
 	color: white !important;
 }
 #contact_form select, #contact_form textarea {
-	font-size: 1.2em;
+	font-size: 1em;
 }
 #contact_form textarea {
 	resize: vertical;
@@ -1496,6 +1551,9 @@ a.captionOrange:hover
 }
 .border_white_top {
 	border-top: 1px solid white;
+}
+.multiple_lists ul li {
+	list-style-type: none;
 }
 .multiple_lists div {
 	padding-left: 7%;
